tests/NormalTests/paczka1/small_fuzzy/88625562.err
Error in line 4: aGjKVP A783 99,8
Error in line 7: aGjKVP A197 78,3
Error in line 11: aGjKVP A783 4,5
